Fix gap on left side of nav bar

--- a/src/sass/_NavBar.sass
+++ b/src/sass/_NavBar.sass
@@ -9,6 +9,7 @@ $navbar-height: 6.6rem
     width: 100%
     position: fixed
     top: 0
+    left: 0
     height: $navbar-height
     line-height: $navbar-height
     vertical-align: middle
